add FHFA file an add both to conf

--- a/common/src/main/resources/reference.conf
+++ b/common/src/main/resources/reference.conf
@@ -206,6 +206,7 @@ hmda {
       2023 {
         filename = "ffiec_census_2023.txt"
         filename = ${?2023_CENSUS_FILENAME}
+        filenameCTCombined = "ffiec_census_2023_combined.txt"
       }
       2024 {
         filename = "ffiec_census_2023.txt"
@@ -238,6 +239,7 @@ hmda {
     2023 {
       fields.filename = "FullCountyLoanLimitList2023.txt"
       fields.filename = ${?COUNTY_LOAN_LIMIT_FILENAME_2023}
+      fields.filenameCombined = "FullCountyLoanLimitList2023_combined.txt"
     }
     2024 {
       fields.filename = "FullCountyLoanLimitList2024.txt"
